--- a/site/training/training-templates/storytelling.qmd
+++ b/site/training/training-templates/storytelling.qmd
@@ -1,8 +1,7 @@
 ---
 title: "Feature <br>Storytelling"
-subtitle: "How do we empower our team to wrap docs into done?"
+subtitle: "How do we empower everyone to wrap docs into done?"
 lightbox: true
-# REMOVE THE SEARCH FALSE TOGGLE WHEN THE COURSE IS READY TO BE PUBLISHED
 search: false
 format:
   revealjs:
@@ -19,7 +18,6 @@ format:
     logo: /validmind.png
     footer: "{{< var validmind.product >}} | [Home {{< fa person-walking-dashed-line-arrow-right >}}](/index.qmd)"
   html:
-  # Change this to the file name prepended by a _ to get around the global HTML output settings required by _metadata.yml
     output-file: _storytelling.html
     search: false
 title-slide-attributes:
@@ -96,196 +94,6 @@ POP QUIZ
 :::
 ::::
 
-
-<!-- ## In this course
-
-:::: {.columns .f4}
-::: {.column width="50%" .mt4 .pr4}
-### [introduction]{.smallcaps}
-- [Before you begin](#before-you-begin)
-
-:::
-
-::::
-
-:::: {.columns .f4}
-
-::: {.column width="50%" .mt4 .pr4}
-### [section 1]{.smallcaps}
-
-1. [iFrame embed right](#iframe-embed-right)
-2. [iFrame embed bottom](#iframe-embed-bottom)
-3. [iFrame embed footer](#iframe-embed-footer)
-4. [Scrollable single user guide](#scrollable-single-user-guide)
-5. [Scrollable tabset user guides](#scrollable-tabset-user-guide)
-
-:::
-
-::: {.column width="50%" .mt4}
-### [section 2]{.smallcaps}
-
-Example embedded `iframe` for interactive copy/paste workaround:
-
-- [Get your code snippet](#get-your-code-snippet)
-
-Topic summary & next steps:
-
-- [Next steps](#next-steps)
-:::
-
-::::
-
-First, let's make sure you can log in to {{< var vm.product >}}.
-
-{{< include /training/assets/_revealjs-navigation.qmd >}} -->
-
-<!-- ## Before you begin
-
-::: {.panel-tabset}
-
-### Registration -->
-
-<!-- CHANGE THIS TO THE ROLE ICON AND REGISTRATION PAGE -->
-
-<!-- To continue, you need to have been [onboarded](course-registration.qmd#register){target="_blank"} onto {{< var validmind.training >}} with the [**{{< fa check >}} Role Name**]{.bubble} role.
-
-<br>
-
-:::: {.tc .mt5 .f2 .embed}
-Already logged in and refreshed this module? Click [{{< fa chevron-right >}}]() to continue.
-
-:::
-
-### Log in
-
-1. Log in to check your access:
-
-:::: {.flex .flex-wrap .justify-around}
-
-::: {.w-50-ns .tc}
-
-[Log in to JupyterHub](https://jupyterhub.validmind.ai/){.button target="_blank"}
-
-:::
-
-::: {.w-50-ns .tc}
-[Log in to {{< var vm.product >}}](https://app.prod.validmind.ai){.button target="_blank"}
-:::
-
-::::
-
-
-::: {.tc .f3}
-Be sure to return to this page afterwards.
-:::
-
-2. After you successfully log in, refresh the page to connect this training module up to the {{< var validmind.platform >}}: 
-
-::: {.tc}
-<button class="button" onClick="window.location.reload();">Refresh Page</button>
-
-:::
-
-
-:::
-
-# [section 1]{.smallcaps} {background-color="#083E44" background-image="/assets/img/solutions-hero.png"} -->
-
-<!-- # iFrame embed right {background-color="#083E44" background-image="/training/assets/home-hero.svg"} -->
-
-<!-- ## {background-iframe="https://app.prod.validmind.ai/" data-preload="yes"} 
-
-:::: {.fr .f3 .mv5 .nr4 .pa5 .overlay}
-This is a right-aligned modal `.overlay` <br>on top of the live {{< var vm.product >}} Platform.  
-
-- It mimics the style of the docs site callouts.
-- **Bold text shows up in a different colour.**
-- You can use an additional callout style <br>with this class: `.embed`
-
-::: {.f4 .pl3 .pr3 .embed}
-**This is the nested embed**, <br>which also has its own bold styling.
-:::
-
-As you can see, you need to get creative <br>with some of your `<br>`s to determine <br>the max-width of the overlay box.
-
-:::: -->
-
-<!-- # iFrame embed bottom {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
-
-## {background-iframe="/notebooks/tutorials/intro_for_model_developers_EXECUTED.html" background-interactive="yes" data-preload="yes"} 
-
-:::: {.absolute bottom=15 left=0 right=50 .w-100 .f3 .tc .pl4 .pr4 .overlay}
-**This is a bottom-aligned modal `.overlay` on top of a rendered site file.**
-
-::: {.f4}
-You can fully interact with the page contents. 
-:::
-::::
-
-# iFrame embed footer {background-color="#083E44" background-image="/training/assets/home-hero.svg"} -->
-
-<!-- ## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
-
-::: footer
-:::: {.absolute bottom=0 left=50 right=50 .w-95 .f3 .tc .pl4 .overlay}
-Sometimes you'll need to move the `overlay` to the footer in order to avoid overlap with UI elements.
-
-::: {.f4}
-This will also stretch the overlay to 95%.
-:::
-
-::::
-::: -->
-
-<!-- # [section 2]{.smallcaps} {background-color="#083E44" background-image="/assets/img/solutions-hero.png"} -->
-
-<!-- ## Get your code snippet
-
-:::: {.columns}
-
-::: {.column width="80%"}
-
-::: {.absolute left="-150" width="100%"}
-
-<div style="zoom: 0.8; overflow: hidden;">
-<iframe 
-    src="https://app.prod.validmind.ai/model-inventory" 
-    width="100%" 
-    height="750" 
-    data-preload="yes" 
-    sandbox="allow-same-origin allow-scripts allow-popups allow-forms"
-    allow="clipboard-read; clipboard-write">
-</iframe>
-</div>
-:::
-
-:::
-
-::: {.column width="20%" .pt2}
-
-::: {.absolute right="-150" .w-30 .f4 .pl4 .pt2 .pb3 .bl}
-{{< var vm.product >}} generates a unique *code snippet* for each registered model to connect with your developer environment:
-
-1. From the **{{< fa cubes >}} Inventory**, select the name of your model to open up the model details page.
-2. On the left sidebar that appears for your model, click **Getting Started**.
-3. Locate the code snippet and click **Copy snippet to clipboard**.
-
-When you're done, click [{{< fa chevron-right >}}]() to continue.
-
-::: {.overlay .pa2 .pl3 .f5}
-**Can't load the {{< var validmind.platform >}}?**
-
-Make sure you're logged in and have refreshed the page.
-:::
-
-
-:::
-
-:::
-
-:::: -->
-
-
 # What's the solution? {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 ## {.scrollable .center}
@@ -305,11 +113,6 @@ Storytelling is a **shared** responsibility. So together let's commit to:
 
 :::
 ::::
-
-<!-- ::: {.f2}
-<br>
-There is more that {{< var vm.product >}} can do to help you {{perform task}}, including {{...}}:
-::: -->
 
 
 
