--- a/site/training/training-templates/storytelling.qmd
+++ b/site/training/training-templates/storytelling.qmd
@@ -16,7 +16,7 @@ format:
     preview-links: auto
     view-distance: 2
     logo: /validmind.png
-    footer: "{{< var validmind.product >}} | [Home {{< fa person-walking-dashed-line-arrow-right >}}](/index.qmd)"
+    footer: "{{< var validmind.product >}}"
   html:
     output-file: _storytelling.html
     search: false
@@ -121,10 +121,6 @@ Storytelling is a **shared** responsibility. So together let's commit to:
 :::: {.columns}
 ::: {.column width="20%" .pr4 .f1}
 What happens now?
-
-<br>
-
-
 
 :::
 
