--- a/site/training/training-templates/storytelling.qmd
+++ b/site/training/training-templates/storytelling.qmd
@@ -112,6 +112,14 @@ Storytelling is a **shared** responsibility. So together let's commit to:
 - [x] Proactively ensuring that enough context is provided for collateral to be created — ownership of information transfer
 
 :::
+
+::: {.tc}
+<br>
+
+[Storytelling scoping process](https://www.notion.so/validmind/Storytelling-scoping-1d019127eb1280fbb756e4b30b678b5d?pvs=4){.button target="_blank"}
+
+:::
+
 ::::
 
 
