Add missing export ongoing monitoring documentation

--- a/site/guide/model-documentation/export-documentation.qmd
+++ b/site/guide/model-documentation/export-documentation.qmd
@@ -53,6 +53,18 @@ Export your model documentation or validation reports as Microsoft Word files (`
 
 6. Click **{{< fa file-arrow-down >}} Download File** to download the file locally on your machine.
 
+## Export ongoing monitoring documentation
+
+1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
+
+2. Select a model or find your model by applying a filter or searching for it.[^4]
+
+3. In the left sidebar that appears for your model, click **{{< fa desktop >}} Ongoing Monitoring**.
+
+4. In right sidebar, click **{{< fa download >}} Export Document**.
+
+7. Click **{{< fa file-arrow-down >}} Download File** to download the file locally on your machine.
+
 ## What's next
 
 * [Working with model documentation](working-with-model-documentation.qmd)
