Add sample training plan 2

--- a/site/training/training.qmd
+++ b/site/training/training.qmd
@@ -19,6 +19,7 @@ listing:
     - program/program-overview.qmd
     - program/learning-paths.qmd
     - program/sample-training-plan.qmd
+    - program/sample-training-plan-2.qmd
     - program/training-faq.qmd
   - id: training-courses
     type: grid
