--- a/site/training/program/sample-training-plan-2.qmd
+++ b/site/training/program/sample-training-plan-2.qmd
@@ -1,7 +1,7 @@
 ---
-title: "Sample training plan - Multinational organization"
+title: "Sample training plan — Multinational organization"
 sidebar: validmind-training
-description: "Sample training plan for multinational organization with regional delivery and role-based training requirements."
+# description: "Sample training plan for multinational organization with regional delivery and role-based training requirements."
 ---
 
 This training plan outlines the implementation strategy for a multinational organization, focusing on regional delivery, role-based training, and ongoing support to ensure successful adoption across all user groups.
@@ -10,16 +10,25 @@ This training plan outlines the implementation strategy for a multinational orga
 
 :::: {.flex .flex-wrap .justify-around}
 
-::: {.w-30-ns}
+::: {.w-30}
 ### <sup>Pre-deployment</sup><br>Initial training
 
 - Platform introduction
 - Role-based fundamentals
-- Hands-on workshops
-- Regional sessions
+- Interactive training
+- Regional virtual sessions
 :::
 
-::: {.w-30-ns}
+::: {.w-30}
+### <sup>Pre-release</sup><br>Update training
+
+- New features
+- Process changes
+- Documentation updates
+- Regional virtual sessions
+:::
+
+::: {.w-30}
 ### <sup>Ongoing</sup><br>Annual refresher  
 
 - Platform updates
@@ -28,113 +37,204 @@ This training plan outlines the implementation strategy for a multinational orga
 - Role-specific updates
 :::
 
-::: {.w-30-ns}
-### <sup>Pre-release</sup><br>Update training
-
-- New features
-- Process changes
-- Documentation updates
-- Regional sessions
-:::
-
 ::::
 
 ## Regional delivery
 
 :::: {.flex .flex-wrap .justify-around}
 
-::: {.w-33-ns .pr2}
+::: {.w-33 .pr-2}
 ### United States
-- Virtual training sessions
-- Hands-on workshops
-- 4+ hours per role
+- Virtual sessions
+- Interactive training
+- Minimum 4 hours per role
 - EST-based scheduling
 ::: 
 
-::: {.w-33-ns .pl2}
+::: {.w-33 .pl-2}
 ### United Kingdom
-- Virtual training sessions
-- Hands-on workshops
-- 4+ hours per role
+- Virtual sessions
+- Interactive training
+- Minimum 4 hours per role
 - GMT-based scheduling
 :::
 
-::: {.w-33-ns .pl2}
+::: {.w-33 .pl-2}
 ### India
-- Virtual training sessions
-- Hands-on workshops
-- 4+ hours per role
+- Virtual sessions
+- Interactive training
+- Minimum 4 hours per role
 - IST-based scheduling
 :::
 
 ::::
 
 ::: {.attn}
-## Initial training
- 
-### Foundation phase (Week 1)
+## Initial onboarding
 
-| Module | Format | Duration | Delivery |
-|--------|---------|----------|-----------|
-| ValidMind 101 | Live + Labs | 2 hours | Regional tracks |
-| Developer foundations | Interactive | 4 hours | Role-specific |
-| Validator essentials | Interactive | 4 hours | Role-specific |
-| Admin core skills | Interactive | 4 hours | Role-specific |
+::: {.panel-tabset}
+### United States
 
-### Implementation phase (Week 2)
+#### Foundation phase (Week 1)
 
-| Module | Format | Duration | Delivery |
-|--------|---------|----------|-----------|
-| Custom workflows | Workshop | 4 hours | Team-based |
-| Integration practices | Technical | 4 hours | Development teams |
-| Advanced validation | Workshop | 4 hours | Validation teams |
-| Governance setup | Technical | 4 hours | Admin teams |
+| Module | Format | Duration | Delivery | Max participants |
+|--------|---------|----------|-----------|------------------|
+| ValidMind 101 | Live + Labs | 2 hours | Team-based | 50 |
+| Developer fundamentals | Interactive | 4 hours | Role-specific | 50 |
+| Validator fundamentals | Interactive | 4 hours | Role-specific | 50 |
+| Administrator fundamentals | Interactive | 4 hours | Role-specific | 50 |
 
-### Optimization phase (Week 3)
+#### Implementation phase (Week 2)
 
-| Module | Format | Duration | Delivery |
-|--------|---------|----------|-----------|
-| Best practices | Workshop | 4 hours | All teams |
-| Advanced features | Technical | 4 hours | Role-specific |
-| Enterprise scale | Strategy | 2 hours | Leadership |
-| Future roadmap | Planning | 2 hours | Key stakeholders |
+| Module | Format | Duration | Delivery | Max participants |
+|--------|---------|----------|-----------|------------------|
+| Custom workflows | Workshop | 4 hours | Team-based | 50 |
+| Integration practices | Technical | 4 hours | Development teams | 50 |
+| Advanced validation | Workshop | 4 hours | Validation teams | 50 |
+| Governance setup | Technical | 4 hours | Admin teams | 50 |
+
+#### Optimization phase (Week 3)
+
+| Module | Format | Duration | Delivery | Max participants |
+|--------|---------|----------|-----------|------------------|
+| Best practices | Workshop | 4 hours | All teams | 50 |
+| Advanced features | Technical | 4 hours | Role-specific | 50 |
+| Enterprise scale | Strategy | 2 hours | Leadership | 50 |
+| Future roadmap | Planning | 2 hours | Key stakeholders | 50 |
+
+### United Kingdom
+
+#### Foundation phase (Week 1)
+
+| Module | Format | Duration | Delivery | Max participants |
+|--------|---------|----------|-----------|------------------|
+| ValidMind 101 | Live + Labs | 2 hours | Team-based | 100 |
+| Developer foundations | Interactive | 4 hours | Role-specific | 100 |
+| Validator essentials | Interactive | 4 hours | Role-specific | 100 |
+| Admin core skills | Interactive | 4 hours | Role-specific | 100 |
+
+#### Implementation phase (Week 2)
+
+| Module | Format | Duration | Delivery | Max participants |
+|--------|---------|----------|-----------|------------------|
+| Custom workflows | Workshop | 4 hours | Team-based | 100 |
+| Integration practices | Technical | 4 hours | Development teams | 100 |
+| Advanced validation | Workshop | 4 hours | Validation teams | 100 |
+| Governance setup | Technical | 4 hours | Admin teams | 100 |
+
+#### Optimization phase (Week 3)
+
+| Module | Format | Duration | Delivery | Max participants |
+|--------|---------|----------|-----------|------------------|
+| Best practices | Workshop | 4 hours | All teams | 100 |
+| Advanced features | Technical | 4 hours | Role-specific | 100 |
+| Enterprise scale | Strategy | 2 hours | Leadership | 100 |
+| Future roadmap | Planning | 2 hours | Key stakeholders | 100 |
+
+### India
+
+#### Foundation phase (Week 1)
+
+| Module | Format | Duration | Delivery | Max participants |
+|--------|---------|----------|-----------|------------------|
+| ValidMind 101 | Live + Labs | 2 hours | Team-based | 50 |
+| Developer foundations | Interactive | 4 hours | Role-specific | 50 |
+| Validator essentials | Interactive | 4 hours | Role-specific | 50 |
+| Admin core skills | Interactive | 4 hours | Role-specific | 50 |
+
+#### Implementation phase (Week 2)
+
+| Module | Format | Duration | Delivery | Max participants |
+|--------|---------|----------|-----------|------------------|
+| Custom workflows | Workshop | 4 hours | Team-based | 50 |
+| Integration practices | Technical | 4 hours | Development teams | 50 |
+| Advanced validation | Workshop | 4 hours | Validation teams | 50 |
+| Governance setup | Technical | 4 hours | Admin teams | 50 |
+
+#### Optimization phase (Week 3)
+
+| Module | Format | Duration | Delivery | Max participants |
+|--------|---------|----------|-----------|------------------|
+| Best practices | Workshop | 4 hours | All teams | 50 |
+| Advanced features | Technical | 4 hours | Role-specific | 50 |
+| Enterprise scale | Strategy | 2 hours | Leadership | 50 |
+| Future roadmap | Planning | 2 hours | Key stakeholders | 50 |
+:::
 :::
 
 ::: {.attn}
-### Pre-release training
+## Pre-release training
 
-| Module | Format | Duration | Delivery |
-|--------|---------|----------|-----------|
-| New features | Technical | 2 hours | Regional tracks |
-| Process changes | Workshop | 2 hours | Role-specific |
-| Documentation review | Interactive | 1 hour | All teams |
-| Q&A session | Virtual | 1 hour | Regional tracks |
+::: {.panel-tabset}
+### United States
+
+| Module | Format | Duration | Delivery | Max participants |
+|--------|---------|-----------|-----------|------------------|
+| Foundation | In-person | 4 hours | Regional | 50 |
+| Implementation | In-person | 4 hours | Regional | 50 |
+| Optimization | In-person | 4 hours | Regional | 50 |
+
+### United Kingdom
+
+| Module | Format | Duration | Delivery | Max participants |
+|--------|---------|-----------|-----------|------------------|
+| Foundation | In-person | 4 hours | Regional | 100 |
+| Implementation | In-person | 4 hours | Regional | 100 |
+| Optimization | In-person | 4 hours | Regional | 100 |
+
+### India
+
+| Module | Format | Duration | Delivery | Max participants |
+|--------|---------|-----------|-----------|------------------|
+| Foundation | In-person | 4 hours | Regional | 50 |
+| Implementation | In-person | 4 hours | Regional | 50 |
+| Optimization | In-person | 4 hours | Regional | 50 |
+:::
 :::
 
 ::: {.attn}
-### Annual refresher training
+## Annual refresher training
 
-| Module | Format | Duration | Delivery |
-|--------|---------|----------|-----------|
-| Platform updates | Virtual | 2 hours | Regional tracks |
-| Best practices | Workshop | 2 hours | Role-specific |
-| New features | Technical | 2 hours | Role-specific |
-| Process review | Interactive | 2 hours | All teams |
+::: {.panel-tabset}
+### United States
+
+| Module | Format | Duration | Delivery | Max participants |
+|--------|---------|-----------|-----------|------------------|
+| Foundation | In-person | 4 hours | Regional | 50 |
+| Implementation | In-person | 4 hours | Regional | 50 |
+| Optimization | In-person | 4 hours | Regional | 50 |
+
+### United Kingdom
+
+| Module | Format | Duration | Delivery | Max participants |
+|--------|---------|-----------|-----------|------------------|
+| Foundation | In-person | 4 hours | Regional | 100 |
+| Implementation | In-person | 4 hours | Regional | 100 |
+| Optimization | In-person | 4 hours | Regional | 100 |
+
+### India
+
+| Module | Format | Duration | Delivery | Max participants |
+|--------|---------|-----------|-----------|------------------|
+| Foundation | In-person | 4 hours | Regional | 50 |
+| Implementation | In-person | 4 hours | Regional | 50 |
+| Optimization | In-person | 4 hours | Regional | 50 |
+:::
 :::
 
 ## Specialized training
 
 :::: {.flex .flex-wrap .justify-around}
 
-::: {.w-50-ns .pr2}
-### GenAI governance
+::: {.w-50 .pr-2}
+### Generative AI governance
 - Custom governance process training
 - Implementation support
 - 6-month completion timeline
 - Role-specific workshops
 :::
 
-::: {.w-50-ns .pl2}
+::: {.w-50 .pl-2}
 ### New user onboarding
 - Training within 1 week of notification
 - Role-based fundamentals
